# fuels-rs-65-configurables-issue

./: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
src/: main.sw
tests/: harness.rs
